--- a/.github/workflows/api_emarketsystemapi.yml
+++ b/.github/workflows/api_emarketsystemapi.yml
@@ -21,8 +21,9 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: npm install
         run: |
+          cd API
           npm install
 
       - name: Zip artifact for deployment
