--- a/.github/workflows/api_emarketsystemapi.yml
+++ b/.github/workflows/api_emarketsystemapi.yml
@@ -27,7 +27,9 @@ jobs:
           npm install
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./API/* -r
+        run: |
+          cd API
+          zip release.zip . -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
