--- a/.github/workflows/api_emarketsystemapi.yml
+++ b/.github/workflows/api_emarketsystemapi.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Zip artifact for deployment
         run: |
           cd API
-          zip release.zip . -r
+          zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
