--- a/.github/workflows/api_emarketsystemapi.yml
+++ b/.github/workflows/api_emarketsystemapi.yml
@@ -27,11 +27,14 @@ jobs:
           npm install
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./API/* -r
+        run: |
+          cd API
+          zip release.zip ./* -r
+          mv release.zip ../
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
-        with:
+        with: 
           name: node-app
           path: release.zip
 
