--- a/.github/workflows/api_emarketsystemapi.yml
+++ b/.github/workflows/api_emarketsystemapi.yml
@@ -6,7 +6,7 @@ name: Build and deploy Node.js app to Azure Web App - EMarketSystemAPI
 on:
   push:
     branches:
-      - Main
+      - main
   workflow_dispatch:
 
 jobs:
