--- a/.github/workflows/main_emarketfront.yml
+++ b/.github/workflows/main_emarketfront.yml
@@ -21,18 +21,18 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: npm install
         run: |
+          cd API
           npm install
-          npm run build --if-present
-          npm run test --if-present
-
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
+        run: |
+          cd API
+          zip release.zip ./* -r
+          mv release.zip ../
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
-        with:
+        with: 
           name: node-app
           path: release.zip
 
