--- a/.github/workflows/main_emarketfront.yml
+++ b/.github/workflows/main_emarketfront.yml
@@ -75,4 +75,5 @@ jobs:
           app-name: 'EMarketFront'
           slot-name: 'Production'
           package: .
+          deployment-method: 'zipDeploy'
           
