--- a/.github/workflows/main_emarketfront.yml
+++ b/.github/workflows/main_emarketfront.yml
@@ -74,6 +74,6 @@ jobs:
         with:
           app-name: 'EMarketFront'
           slot-name: 'Production'
-          package: .
-          deployment-method: 'zipDeploy'
+          package: ./release.zip
+
           
