--- a/.github/workflows/main_emarketfront.yml
+++ b/.github/workflows/main_emarketfront.yml
@@ -43,7 +43,7 @@ jobs:
         with: 
           name: node-app
           path: release.zip
-
+          include-hidden-files: 'true'
   deploy:
     runs-on: ubuntu-latest
     needs: build
