--- a/.github/workflows/main_emarketfront.yml
+++ b/.github/workflows/main_emarketfront.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Zip artifact for deployment
         run: |
           cd front/app
-          zip -r release.zip ./*
+          zip -r release.zip ./
           mv release.zip ../../
           
       - name: Upload artifact for deployment job
