--- a/front/app/package.json
+++ b/front/app/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "next": "^15.1.6",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
