--- a/front/app/package.json
+++ b/front/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "next": "^15.1.6",
+    "prop-types": "^15.8.1",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
