--- a/front/app/package.json
+++ b/front/app/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "next": "^15.1.6",
+    "next-auth": "^5.0.0-beta.30",
     "prop-types": "^15.8.1",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
