--- a/.github/workflows/api_emarketsystemapi.yml
+++ b/.github/workflows/api_emarketsystemapi.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
-        with: 
+        with:
           name: node-app
           path: release.zip
 
@@ -55,13 +55,21 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_DD71E0B63D6D4C1D8356A5E16AE45900 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_CFDA96EAD0564DE5B2179B39E6659BC6 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B715E2E55322455988C83865B261DF68 }}
+
+      - name: Debug publishing profile fetch
+        run: |
+          set -e
+          az webapp deployment list-publishing-profiles \
+            -g EMarketSystem \
+            -n EMarketSystemAPI \
+            --query "[0].publishingUserName" -o tsv
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
@@ -71,3 +79,4 @@ jobs:
           slot-name: 'Production'
           package: .
           
+
